fixed docker build issue